Fixed WeDealWith arrow overlapping issue

--- a/src/app/components/WeDealWith/WeDealWith.module.css
+++ b/src/app/components/WeDealWith/WeDealWith.module.css
@@ -8,9 +8,9 @@
   min-height: 720px;
   padding: 2rem;
   background: #0038ff;
-  width: 88%;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .inverted {
